--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,9 @@
     <string name="already_have_account">Ya tienes cuenta?</string>
     <string name="email">Correo</string>
     <string name="password">Contraseña</string>
+    <string name="Olvide_mi_contra">Olvidaste tu contraseña?</string>
     <string name="create_account">Crear cuenta </string>
+    <string name="recuperar">Recuperar Contraseña </string>
     <string name="id_cliente">361752021224-jbjscf5m9hhbj3l0o1g94q13khni1d9f.apps.googleusercontent.com</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
